<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InstructorSignUpActivity">

    <ScrollView
        android:id="@+id/attributesView"
        android:layout_width="414dp"
        android:layout_height="651dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_signUp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginBottom="15dp"
                android:hint="@string/email"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:textSize="22sp" />

            <EditText
                android:id="@+id/etFirstName"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginBottom="15dp"
                android:hint="@string/first_name"
                android:importantForAutofill="no"
                android:inputType="text"
                android:maxLength="20"
                android:textSize="22sp" />

            <EditText
                android:id="@+id/etLastName"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginBottom="15dp"
                android:hint="@string/last_name"
                android:importantForAutofill="no"
                android:inputType="text"
                android:maxLength="20"
                android:textSize="22sp" />

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginBottom="15dp"
                android:hint="@string/password"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:maxLength="15"
                android:textSize="22sp" />

            <EditText
                android:id="@+id/etConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginBottom="15dp"
                android:hint="@string/confirm_password"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:maxLength="15"
                android:textSize="22sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Attach photo"
                    android:textSize="22sp"
                    android:paddingStart="10dp"
                    android:layout_marginTop="15dp"/>

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/attachPhoto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="70dp"
                    android:layout_marginBottom="5dp"
                    android:clickable="true"
                    android:contentDescription="@android:string/search_go"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/textView2"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/plus" />
            </LinearLayout>

            <EditText
                android:id="@+id/etMobileNumber"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginBottom="15dp"
                android:hint="@string/mobile_number"
                android:importantForAutofill="no"
                android:inputType="numberDecimal"
                android:maxLength="10"
                android:textSize="22sp" />

            <EditText
                android:id="@+id/etAddress"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginBottom="15dp"
                android:hint="@string/address"
                android:importantForAutofill="no"
                android:inputType="text"
                android:textSize="22sp" />

            <EditText
                android:id="@+id/etSpecialization"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginBottom="15dp"
                android:hint="@string/specialization"
                android:importantForAutofill="no"
                android:inputType="text"
                android:textSize="22sp" />

            <EditText
                android:id="@+id/etDegree"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginBottom="15dp"
                android:hint="@string/degree_bsc_msc_phd"
                android:importantForAutofill="no"
                android:inputType="text"
                android:textSize="22sp" />

            <EditText
                android:id="@+id/etCourses"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginBottom="15dp"
                android:hint="Enter courses that you can teach seperated by comma:"
                android:importantForAutofill="no"
                android:inputType="text"
                android:textSize="22sp" />

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/btn_signUp"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="106dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="106dp"
        android:layout_marginBottom="17dp"
        android:text="@string/sign_up"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/attributesView" />

</androidx.constraintlayout.widget.ConstraintLayout>